# genomics-mlir

./: .gitignore  CMakeLists.txt  README.md
build_tools/: llvm_version.txt
genomics-hlo/: CMakeLists.txt
genomics-hlo/genomics-hlo/: CMakeLists.txt
tools/: CMakeLists.txt
tools/genomics-mlir-opt/: CMakeLists.txt  genomics-mlir-opt.cc
